--- a/java/aopdemo/pom.xml
+++ b/java/aopdemo/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
-            <version>${spring.version}</version>
+            <version>5.3.6</version>
         </dependency>
     </dependencies>
 
