--- a/java/mybatis/pom.xml
+++ b/java/mybatis/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
