--- a/java/mybatis/src/main/resources/application.yml
+++ b/java/mybatis/src/main/resources/application.yml
@@ -1,1 +1,16 @@
+server:
+  tomcat:
+    uri-encoding: utf-8
+    threads:
+      max: 200
+      min-spare: 30
+    connection-timeout: 5000ms
+  port: 8080
+  servlet:
+    context-path: /myproject
+
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
 
