--- a/java/mybatis/pom.xml
+++ b/java/mybatis/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.13</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
