--- a/java/mybatis/src/main/resources/application.yml
+++ b/java/mybatis/src/main/resources/application.yml
@@ -13,4 +13,6 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:
 
