--- a/java/mybatis/src/main/resources/application.yml
+++ b/java/mybatis/src/main/resources/application.yml
@@ -14,5 +14,14 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:
+      url: jdbc:mysql://localhost:3306/yq
+      username: root
+      password: root
+      initial-size: 8
+      max-active: 16
+      min-idle: 8
+      max-wait: 60000
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
 
