--- a/java/mybatis/src/main/resources/application.yml
+++ b/java/mybatis/src/main/resources/application.yml
@@ -25,3 +25,10 @@ spring:
       test-on-borrow: false
       test-on-return: false
 
+mybatis:
+  mapper-locations: classpath*:mapper/*.xml
+  type-aliases-package: com.example.mybatis.db
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+
