--- a/java/mybatis/src/main/resources/application.yml
+++ b/java/mybatis/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
 
 mybatis:
   mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.example.mybatis.db
+  type-aliases-package: com.example.mybatis.pojo
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
