--- a/java/mybatis/pom.xml
+++ b/java/mybatis/pom.xml
@@ -33,8 +33,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configu</artifactId>
-            <version>5.3.9</version>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
