--- a/java/bladedemo/pom.xml
+++ b/java/bladedemo/pom.xml
@@ -12,5 +12,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.bladejava</groupId>
+            <artifactId>blade-mvc</artifactId>
+            <version>2.0.15.RELEASE</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
