--- a/java/springclouddemo/feigndemo/src/main/resources/application.yml
+++ b/java/springclouddemo/feigndemo/src/main/resources/application.yml
@@ -1,1 +1,9 @@
-
+Spring:
+  application:
+    name: cityclient
+server:
+  port: 8081
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9991/eureka/
