--- a/java/message_transfer_performence/pom.xml
+++ b/java/message_transfer_performence/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.exe.test</groupId>
+            <artifactId></artifactId>
+        </dependency>
 
 
     </dependencies>
