--- a/java/message_transfer_performence/pom.xml
+++ b/java/message_transfer_performence/pom.xml
@@ -26,8 +26,11 @@
             <version>2.9.0</version>
         </dependency>
         <dependency>
-            <groupId>com.exe.test</groupId>
-            <artifactId></artifactId>
+            <groupId>com.hope.cloud</groupId>
+            <artifactId>cloud</artifactId>
+            <version>1.2.02</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/cloud</systemPath>
         </dependency>
 
 
