--- a/java/ioctest/pom.xml
+++ b/java/ioctest/pom.xml
@@ -21,6 +21,14 @@
             <version>5.3.18</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
