--- a/java/ioctest/pom.xml
+++ b/java/ioctest/pom.xml
@@ -28,7 +28,12 @@
             <version>5.3.18</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.18</version>
+        </dependency>
     </dependencies>
 
 </project>
