--- a/java/java_excel/pom.xml
+++ b/java/java_excel/pom.xml
@@ -33,8 +33,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId></groupId>
-            <artifactId></artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
         </dependency>
     </dependencies>
 
