--- a/java/myspringcloud/eureka-server/src/main/resources/application.properties
+++ b/java/myspringcloud/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=1111
 eureka.instance.homename=localhost
+#不会注册到eureka中
 eureka.client.register-with-eureka=false
+#不会抓取注册服务
 eureka.client.fetch-registry=false
+#指定服务注册中心的地址
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
