--- a/java/myspringcloud/eureka-server/src/main/resources/application.properties
+++ b/java/myspringcloud/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1111
-eureka.instance.hostname=peek1
+eureka.instance.hostname=localhost
 #不会注册到eureka中
 eureka.client.register-with-eureka=false
 #不会抓取注册服务
