--- a/java/myspringcloud/eureka-server/src/main/resources/application-test.properties
+++ b/java/myspringcloud/eureka-server/src/main/resources/application-test.properties
@@ -5,3 +5,6 @@ eureka.server.enable-self-preservation=false
 eureka.client.fetch-registry=false
 eureka.client.instance.lease-renewal-interval-in-seconds=1
 eureka.client.instance.lease-expiration-duration-in-seconds=2
+
+eureka.instance.hostname=peer1
+eureka.client.serviceUrl.default
