--- a/java/myspringcloud/ribbon-consumer/pom.xml
+++ b/java/myspringcloud/ribbon-consumer/pom.xml
@@ -19,8 +19,8 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka/artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
