--- a/java/myspringcloud/ribbon-consumer/src/main/resources/application.properties
+++ b/java/myspringcloud/ribbon-consumer/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=ribbon-consumer
 server.port=9000
-eureka.client.ServiceUrl.defaultZone=http://localhost:1111/eureka/
+eureka.client.ServiceUrl.defaultZone=http://peer1:1111/eureka/,http://peer2:1112/eureka/
