--- a/java/myspringcloud/eureka-server/src/main/resources/application.yml
+++ b/java/myspringcloud/eureka-server/src/main/resources/application.yml
@@ -13,6 +13,8 @@ eureka:
   instance:
     hostname: peer1
     prefer-ip-address: false
+  server:
+    enableself-preservation: false
   client:
     serviceUrl:
       defaultZone: http://peer2:1112/eureka/
@@ -28,6 +30,8 @@ eureka:
   instance:
     hostname: peer2
     prefer-ip-address: false
+  server:
+    enableself-preservation: false
   client:
     serviceUrl:
       defaultZone: http://peer1:1111/eureka/
