--- a/java/myspringcloud/eureka-server/src/main/resources/application.yml
+++ b/java/myspringcloud/eureka-server/src/main/resources/application.yml
@@ -17,6 +17,8 @@ eureka:
     enableself-preservation: false
   client:
     register-with-eureka: false
+    serviceUrl:
+      defaultZone: http://peer2:1112/eureka/
 
 ---
 #spring:
